# ParaCL

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/ast/: ast_builder.hpp  expr.hpp  expr_nodes.hpp  operators.hpp  stmt.hpp  stmt_nodes.hpp
include/codegen/: codegen_context.hpp  expr_codegen.hpp  module_codegen.hpp  stmt_codegen.hpp
include/errors/: errors.hpp
include/interpreter/: context.hpp
include/syntax/: driver.hpp  lexer.hpp
runtime/: pclrt.cpp
src/: main.cpp
src/codegen/: codegen_context.cpp  expr_codegen.cpp  module_codegen.cpp  stmt_codegen.cpp
src/syntax/: driver.cpp  driver.hpp  lexer.l  parser.y
tests/data/: error_missing_expr.txt  error_unclosed_block.txt  fibonacci.txt  if_else_ok.txt  nested_blocks_ok.txt  ok_text.txt  unary_minus_ok.txt  while_ok.txt
tests/e2e/: 001.ans  002.ans  007.ans  008.ans  012.ans  014.ans  run_codegen_e2e.sh  run_e2e.sh
tests/programs/: factorial.paracl
tests/unit/: test_ast_builder.cpp  test_ast_nodes.cpp  test_context.cpp  test_errors.cpp  test_main.cpp  test_syntax.cpp
